--- a/qa/templates/qa/ask_question.html
+++ b/qa/templates/qa/ask_question.html
@@ -1,9 +1,15 @@
-{% extends 'qa/base.html' %} {% block content %}
+{% ext ends 'qa/base.html' %} {% block content %}
 <h2>Ask a New Question</h2>
-<form method="post">
+<form method="post" class="mt-4">
     {% csrf_token %}
-    <input type="text" name="title" placeholder="Title" size="50" /><br /><br />
-    <textarea name="content" rows="6" cols="60" placeholder="Your question here..."></textarea><br />
-    <button type="submit">Post Question</button>
+    <div class="mb-3">
+        <label for="title" class="form-label">Title</label>
+        <input type="text " name="title" id="title" class="form-control" placeholder="Enter your question title" />
+    </div>
+    <div class="mb-3">
+        <label for="content" class="form-label">Content</label>
+        <textarea name="content" id="content" class="form-control" rows="6" placeholder="Describe your question in detail..."></textarea>
+    </div>
+    <button type="submit" class="btn btn-primary">Post Question</button>
 </form>
 {% endblock %}
